<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context="com.vic.villz.journalapp.Activities.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:src="@drawable/ic_journal_image"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="280dp">



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/wrapper"
        android:elevation="5dp"
        android:background="@drawable/auth_background"
        android:paddingHorizontal="20dp"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="@color/text_color"
            android:text="@string/sign_in"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:hint="Email"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                app:backgroundTint="@color/colorGrey"
                android:drawableLeft="@drawable/ic_email_outline"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="44dp"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_color"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                app:backgroundTint="@color/colorGrey"
                android:drawableStart="@drawable/ic_lock"/>

        </android.support.design.widget.TextInputLayout>



    </android.support.v7.widget.LinearLayoutCompat>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            app:fabSize="normal"
            android:src="@drawable/btn_background"
            android:elevation="8dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@color/colorGrey"
            android:layout_height="2dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="or"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@color/colorGrey"
            android:layout_height="2dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <com.google.android.gms.common.SignInButton
        android:layout_marginTop="5dp"
        android:id="@+id/sign_in_button"
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:text="Dont have an account?   "
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/register"
            android:text="Register"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>