<resources>
    <string name="app_name">JournalApp</string>
    <string name="title_activity_home_page">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?  </string>
    <string name="login">Login</string>
    <string name="date">2018:10:12</string>
    <string name="title">Title</string>
    <string name="update_details">Update details</string>
    <string name="add_your_thought">Add your thought</string>
    <string name="update">UPDATE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="add">Add</string>
    <string name="time">time</string>
    <string name="description">this is the description section</string>
    <string name="journal">Journal</string>
    <string name="logout">LOGOUT</string>
</resources>
